# natq

./: .gitignore  AGENTS.md  README.md
e2e/: README.md
e2e/tester/: go.mod  go.sum  main.go
e2e/workers/python/: README.md  main.py  pyproject.toml
e2e/workers/typescript/: package.json  tsconfig.json
e2e/workers/typescript/src/: main.ts
natq-py/: README.md  pyproject.toml
natq-py/src/natq/: __init__.py  logger.py  worker.py
natq-py/tests/: __init__.py  test_logger.py  test_worker.py
natq-ts/: README.md  package.json  tsconfig.json
natq-ts/src/: index.ts  logger.test.ts  logger.ts  worker.test.ts  worker.ts
