[tool.poetry]
name = "natq"
version = "0.1.0"
description = "A language-agnostic distributed task queue framework built on NATS"
authors = []
readme = "README.md"
packages = [{include = "natq", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
nats-py = "^2.9.0"
uuid-utils = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
black = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
